<resources>
    <string name="app_name">Isyaratku</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_rank">Rank</string>
    <string name="title_profile">Profile</string>
    <string name="title_camera">Camera</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="point">point</string>
    <string name="quotes">\"Sign language is the equal of speech, lending itself equally to the rigorous and the poetic, to philosophical analysis or to making love.\" ~ Oliver Sacks</string>
    <string name="change_username">Change Username</string>
    <string name="change_email">Change Email</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="log_out">Log Out</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="language">Language</string>
    <string name="accessibility">Accessibility</string>
    <string name="point_asl">Point ASL: %1$s</string>
    <string name="point_bisindo">Point Bisindo : %1$s</string>
    <string name="cancel">cancel</string>
    <string name="ok">ok</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="new_email">New Email</string>
    <string name="title_register">Create Account to start the challenge now !!</string>
    <string name="username">Username</string>
    <string name="enter_username">Enter Username</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_new_password">Confirm new Password</string>
    <string name="register">Register</string>
    <string name="subtitle_home">Ayo mulai challenge dirimu</string>
    <string name="welcome_home">Welcome to Isyaratku</string>
    <string name="title_login">welcome to Isyaratku</string>
    <string name="subtitle_login">Learn Sign Language Now</string>
    <string name="login">Login</string>
    <string name="signupdesc">Don\'t have any account ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgotpassworddesc">Forgot Password ?</string>
    <string name="click_here">click here</string>
    <string name="return_to">" return"</string>
    <string name="forgot_password_title">Forgot Password ?</string>
    <string name="forgot_password_desc">we will send you email to change password, please check email inbox after password change request</string>
    <string name="send">Send</string>
    <string name="password_hint">Enter your Password</string>
    <string name="internet_not_detected">Internet not detected</string>
    <string name="username_changed">Username Changed</string>
    <string name="email_changed">Email Changed</string>
    <string name="user_logout">User Logout</string>
    <string name="image_uploading_in_process">Image Uploading in Process</string>
    <string name="image_updated">Image Updated</string>
    <string name="no_image_selected">No Image Selected</string>

    <string name="tab_text_1">ASL</string>
    <string name="tab_text_2">Bisindo</string>
</resources>


